2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/AppKit/AppKitConstants.list: Remove obsolete NSDataLink
	constants.
	* Modules/AppKit/AppKitConstants.m: Regenerated.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Documentation/ApplicationScripting.txt: Fix errors.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STEngine.h (-methodFromSource:...):
	* Frameworks/StepTalk/STEngine.m (-methodFromSource:...):
	STMethod is a protocol not a class.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (STSelectorTypes,
	STSelectorFromString, STCreateTypedSelector,
	STConstructMethodSignatureForSelector): Add special case to
	register selectors of (Smalltalk) binary operators with one
	argument instead of zero.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (STSelectorFromString):
	Always register typed selectors, since forwarding to untyped
	selectors stopped working a while back in GNUstep.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSInvocation+additions.m:
	* Frameworks/StepTalk/STStructure.m:
	* Modules/ObjectiveC/NSObject+additions.m:
	* Modules/ObjectiveC/ObjectiveCRuntime.m:
	Clean up imports removing includes of Objective-C runtime headers.
	Also replace a few more deprecated Objective-C runtime calls.

2011-04-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/ObjectiveC/ObjectiveCRuntime.m (-allClasses):
	* Modules/ObjectiveC/NSObject+additions.m (methods_for_class,
	ivars_for_class, +methodNames): Update to Objective-C 2 API.

2011-04-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Frameworks/StepTalk/STObjCRuntime.m: replace runtime specific typed
	selector code with the standard gnustep functions.

2011-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STLanguageManager.m (-dealloc): Fix
	typo. (Was calling -dealloc on self instead of super).
